Fixed styling issue where links on edit menu were too wide

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,10 +37,6 @@ table {
     text-align: left;
 }
 
-#edit-menu-options a {
-    display: block;
-}
-
 #login-box {
     position: absolute;
     right: 0;
